--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
-        "slim/slim": "^4.0",
-        "slim/psr7": "^1.3",
-        "vlucas/phpdotenv": "^5.6"
+        "slim/slim": "^4.12",
+        "slim/psr7": "^1.6",
+        "vlucas/phpdotenv": "^5.6",
+        "firebase/php-jwt": "^6.9"
      }
  }
