--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
         "slim/slim": "^4.12",
         "slim/psr7": "^1.6",
         "vlucas/phpdotenv": "^5.6",
-        "firebase/php-jwt": "^6.9"
+        "firebase/php-jwt": "^6.9",
+        "league/csv": "^9.12",
+        "tecnickcom/tcpdf": "^6.6",
+        "setasign/fpdf": "^1.8",
+        "fpdf/fpdf": "^1.86"
      }
  }
